# learning_opengl

./: .gitignore  3-load_modal.cpp  4-1_depth-test.cpp  4-2_stencil-test.cpp  4-3_mix.cpp  4-4_face-culling.cpp  4-5_frame-buffer.cpp  4-6_sky-box.cpp  4-7_uniform-buffer.cpp  4-8-2_explode-model.cpp  4-8-3_mode-normal.cpp  4-8_geometry-shader.cpp  4-9-2_instancing-planet.cpp  4-9_instancing.cpp  CMakeLists.txt  app  app.cpp  app_light  camera.cpp  camera.h  glfw.cpp  imgui.ini  index_buffer.cpp  index_buffer.h  main.cpp  mesh.cpp  mesh.h  model  model.cpp  self_imgui.cpp  self_imgui.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.h
app.dSYM/Contents/Resources/DWARF/: app
app_light.dSYM/Contents/: Info.plist
app_light.dSYM/Contents/Resources/DWARF/: app_light
dependencies/include/glad/: glad.h
history_cpp/: light.cpp
lib/: camera.cpp  camera.h  cube_texture.cpp  cube_texture.h  frame_buffer.cpp  frame_buffer.h  glfw.h  mesh.h  model.cpp  model.h  render_buffer.cpp  render_buffer.h  self_imgui.cpp  shader.cpp  shader.h  texture.cpp  texture.h  texture_frame_buffer.cpp  texture_frame_buffer.h  uniform_buffer.cpp  uniform_buffer.h  uniform_buffer_layout.h  vertex_array.cpp  vertex_array.h  vertex_buffer_layout.h
model.dSYM/Contents/Resources/DWARF/: model
res/shaders/: fs1.fs  fs3.fs  vs1.vs
res/shaders/depth-test/: dt.fs
res/shaders/explode-model/: em.fs  em.gs  em.vs
res/shaders/frame-buffer/: normal.vs  screen.fs
res/shaders/geometry-shader/: gs.fs  gs.gs  gs.vs
res/shaders/instancing/: ins.fs  ins.vs
res/shaders/light/: box.fs  box.vs  light.fs
res/shaders/model/: model.fs  model.vs
res/shaders/normal_model/: model.fs  model.vs  normal.gs  normal.vs
res/shaders/planet/: asteroids.fs  asteroids.vs  planet.fs  planet.vs
res/shaders/sky-box/: bg.fs  bg.vs  cube.fs  cube.vs  sb.fs
res/shaders/stencil-test/: dt.fs  st.fs  st.vs
src/: app.cpp  shader.cpp  shader.h
src/res/shaders/: fs2.fs  vs1.vs  vs2.vs  vs3.vs
vendors/glad/: glad.c
